# cqrlib

./: README.md  __init__.py  pyproject.toml  requirements.txt
Back_test/: __init__.py  opt_trade_rule.py  stats_measure.py
Ensemble/: __init__.py  seq_bts_bagging.py
Features/: __init__.py  fractional_diff.py
Filters/: __init__.py
Labels/: __init__.py  triple_barrier_method.py
Portfolio_opt/: __init__.py  mv.py  risk_est.py
Risk_mgmt/: __init__.py  bet_size.py  ef3m.py
Sample_data/: __init__.py
Sampling/: __init__.py  sample_unique.py
Tools/: __init__.py  metrics.py
Util/: __init__.py
